Fix bug where long words in a comment would not wrap onto new line

--- a/styles/post.css
+++ b/styles/post.css
@@ -177,6 +177,7 @@ main {
 
 .comment-card {
   padding: 20px;
+  overflow-wrap: anywhere;
 }
 
 .comment-card-border {
